WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70113
CachedResourceClient types should be ASSERTed, rather than checked
https://bugs.webkit.org/show_bug.cgi?id=70113
Summary
CachedResourceClient types should be ASSERTed, rather than checked
Nate Chapin
Reported
2011-10-14 09:51:47 PDT
If there are CachedResourceClient type mismatches in CachedResourceClientWalker or the CachedResource subclasses, it's an error on our part, so we should assert. See
https://bugs.webkit.org/show_bug.cgi?id=69877
for the initial discussion.
Attachments
patch
(4.27 KB, patch)
2011-10-14 09:53 PDT
,
Nate Chapin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Nate Chapin
Comment 1
2011-10-14 09:53:58 PDT
Created
attachment 111024
[details]
patch
WebKit Review Bot
Comment 2
2011-10-14 12:31:05 PDT
Comment on
attachment 111024
[details]
patch Clearing flags on attachment: 111024 Committed
r97491
: <
http://trac.webkit.org/changeset/97491
>
WebKit Review Bot
Comment 3
2011-10-14 12:31:10 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug