Check CachedResourceClient types with ASSERTs rather than if statements. https://bugs.webkit.org/show_bug.cgi?id=70113

Reviewed by Adam Barth.

No new tests, no functionality change.

* loader/cache/CachedCSSStyleSheet.cpp:
* loader/cache/CachedFont.cpp:
* loader/cache/CachedImage.cpp:
* loader/cache/CachedResourceClientWalker.h:
* loader/cache/CachedXSLStyleSheet.cpp:


Canonical link: https://commits.webkit.org/86220@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97491 268f45cc-cd09-0410-ab3c-d52691b4dbfc