Source/WebCore/loader/cache/CachedXSLStyleSheet.cpp
@@ -48,7 +48,8 @@ CachedXSLStyleSheet::CachedXSLStyleSheet(const ResourceRequest& resourceRequest)
 
 void CachedXSLStyleSheet::didAddClient(CachedResourceClient* c)
 {  
-    if (!isLoading() && c->resourceClientType() == CachedStyleSheetClient::expectedType())
+    ASSERT(c->resourceClientType() == CachedStyleSheetClient::expectedType());
+    if (!isLoading())
         static_cast<CachedStyleSheetClient*>(c)->setXSLStyleSheet(m_resourceRequest.url(), m_response.url(), m_sheet);
 }
 
